Fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   min-height: 100vh;
+  display: flex;
 }
 
 .App-logo {
